Fix bingo button overlap

--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -49,7 +49,7 @@
   font-size: 2.5em;
   border: none;
   border-radius: 12px;
-  margin: 1%;
+  margin: 5%;
   padding: 0 10%;
   cursor: pointer;
   transition: .2s;
